Fix the hero on the front page and on the recent updates page (blogs) on mobile version

--- a/themes/sosnpr/sass/scss_pages/_front.scss
+++ b/themes/sosnpr/sass/scss_pages/_front.scss
@@ -1,14 +1,19 @@
 .front-page-hero{
   background-image: url(../../sos_assets/home-page/south-okanagan-grasslands-2.jpg) ;
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
   align-items:center;
+
+  @include tablet {
+    background-size: cover;
+    padding-top:30px;
+  }
   
   align-content:center;
   background-position: bottom center;
   height:90vh;
   font-family:$miriam;
-  padding-top:30px;
+  padding-top:60px;
   display:flex;
   flex-direction:column;
   h1{
