--- a/themes/sosnpr/sass/scss_pages/_home.scss
+++ b/themes/sosnpr/sass/scss_pages/_home.scss
@@ -9,7 +9,10 @@
       height: 85vh;
       font-family: $miriam;
       margin-bottom: 70px;
-      padding-top: 20px;
+      padding-top: 60px;
+      @include tablet {
+        padding-top: 20px;
+      }
       h2 {
         text-align: center;
         font-size: 30px;
