--- a/themes/sosnpr/style.css
+++ b/themes/sosnpr/style.css
@@ -1461,7 +1461,7 @@ a:visited {
 
 .front-page-hero {
   background-image: url(../../sos_assets/home-page/south-okanagan-grasslands-2.jpg);
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -1471,7 +1471,7 @@ a:visited {
   background-position: bottom center;
   height: 90vh;
   font-family: "Miriam Libre", sans-serif;
-  padding-top: 30px;
+  padding-top: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1479,6 +1479,10 @@ a:visited {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column; }
+  @media all and (min-width: 600px) {
+    .front-page-hero {
+      background-size: cover;
+      padding-top: 30px; } }
   .front-page-hero h1 {
     color: #285817;
     font-family: "Miriam Libre", sans-serif;
@@ -3152,7 +3156,10 @@ a:visited {
   height: 85vh;
   font-family: "Miriam Libre", sans-serif;
   margin-bottom: 70px;
-  padding-top: 20px; }
+  padding-top: 60px; }
+  @media all and (min-width: 600px) {
+    .blog .site-content .updates-hero {
+      padding-top: 20px; } }
   .blog .site-content .updates-hero h2 {
     text-align: center;
     font-size: 30px;
